--- a/rstoys/touchy/templates/touchy.html
+++ b/rstoys/touchy/templates/touchy.html
@@ -9,6 +9,7 @@
 
     body {
         font-family: "Courier New"; font-size: 16px;
+        background-color: #000;
     }
 
     #joy {
@@ -17,10 +18,10 @@
         height: 300px;
         border-radius: 22px;
         background-color: #f0fff0;
-        border: 2px solid #c0ffc0;
+        border: 2px solid #aaa;
         position: relative;
         cursor: pointer;
-        background-image: url('/static/stick-back.png');
+        background-image: url('/static/stick1-back.jpg');
         box-shadow: 1px 1px 8px rgba(0,0,0,0.4);
 
         -webkit-user-select: none; /* Safari 3.1+ */
@@ -34,18 +35,20 @@
         left: -1000px;
         top: -1000px;
         display: inline-block;
-        background-color: #ffa080;
-        border: 1px solid rgba(0,0,0,0.4);
+        x-background-color: #ffa080;
+        x-border: 1px solid rgba(0,0,0,0.4);
         width: 60px;
         height: 60px;
         border-radius: 60px;
         box-shadow: 2px 2px 8px rgba(0,0,0,0.3);
+        background-image: url('/static/stick1-top.png');
     }
 
     #joy > svg { position: absolute; }
     
     #info {
         text-align: center;
+        color: #ccc;
     }
 
 </style>
